<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.familyschool.familyschool.activity.LancamentoActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/txt_titulo"
            android:hint="Assunto"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/nome_do_aluno"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_nome_aluno"
                android:padding="10dp"
                android:hint="Nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/nota"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_nota_aluno"
                android:padding="10dp"
                android:text="@string/selecione_a_nota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/bimestre"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <TextView
            android:padding="10dp"
            android:text="@string/resposta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_resposta"
            android:textColor="@color/black"
            android:padding="10dp"
            android:hint="resposta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/btn_resposta"
            android:text="@string/arquivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_lancar"
                android:text="@string/lancar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/primary_dark"
                android:textColor="@color/white"
                style="?android:buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btn_cancelar"
                android:textColor="@color/white"
                android:text="@string/cancelar"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/primary_dark"
                style="?android:buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
