<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.familyschool.familyschool.activity.NotasActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/txt_aluno"
            android:text="@string/nome"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>
        <TextView
            android:id="@+id/txt_nota1"
            android:text="@string/nota1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>
        <TextView
            android:id="@+id/txt_nota2"
            android:text="@string/nota2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/txt_media"
            android:text="@string/nota_bimestre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerAlunos"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_cancelar"
            android:textColor="@color/white"
            android:text="@string/cancelar"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>
