<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.familyschool.familyschool.activity.TarefaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"/>

    <TextView
        android:id="@+id/text_title"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/criar_tarefa" />

    <LinearLayout
        android:id="@+id/ln_turma"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/text_turma"
            android:textColor="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_assunto"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="Assunto:"
            android:textColor="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edit_assunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_descricao"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="100dp">
        <TextView
            android:text="@string/descricao"
            android:textColor="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_descricao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fundo_caixa_texto"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:ems="10"
            android:inputType="textMultiLine"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_nota"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nota_inicial"
            android:textColor="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_nota"
            android:hint="@string/SelecionaNota"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_data"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/data_de_entrega"
            android:textColor="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_data"
            android:hint="@string/data"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_enviar"
            android:text="Enviar"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:textColor="@color/white"
            style="?android:buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn_cancelar"
            android:textColor="@color/white"
            android:text="Cancelar"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
