<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_tarefa"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.familyschool.familyschool.activity.TarefaActivity"
    tools:showIn="@layout/app_bar_tarefa">

    <TextView
        android:id="@+id/text_title"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/criar_tarefa" />

    <LinearLayout
        android:id="@+id/ln_turma"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/text_turma"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_assunto"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="Assunto:"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edit_assunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_descricao"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="100dp">
        <TextView
            android:text="@string/descricao"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_descricao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:ems="10"
            android:inputType="textMultiLine"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ln_anexo"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/anexo"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/btn_anexar"
            android:text="@string/anexar_tarefa"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_data"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/data_de_entrega"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_data"
            android:ems="10"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_enviar"
            android:text="Enviar"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            style="?android:buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn_cancelar"
            android:text="Cancelar"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>
