<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.familyschool.familyschool.activity.TarefaAlunoActivity">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_assunto"
            android:hint="Assunto"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_professor"
            android:hint="Professor"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_descricao"
            android:hint="Descrição"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_notaTarefa"
                android:hint="Nota"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_data"
                android:hint="Data Entrega"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_arquivo"
            android:text="@string/arquivo"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/resposta"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_descricao"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="100dp"
            android:background="@drawable/fundo_caixa_texto"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:ems="10"
            android:inputType="textMultiLine"/>
        <Button
            android:id="@+id/btn_anexar"
            android:text="@string/anexar"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_enviar"
            android:text="Enviar"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:textColor="@color/white"
            style="?android:buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btn_cancelar"
            android:textColor="@color/white"
            android:text="Cancelar"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>